fixed device dashboard views
